db.yaml
# DB deployment
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: db
  labels:
    app: db
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec: 
      containers:
        - name: db
          image: 451153100141.dkr.ecr.ap-northeast-1.amazonaws.com/portfolio_db
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
              name: db-server
              protocol: TCP
          volumeMounts:
          - name: db-mount 
            mountPath: /var/lib/mysql
      volumes:
        - name: db-mount
          persistentVolumeClaim:
            claimName: db-pvc
---
# DB svc
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: db
spec:
  ports:
    - port: 3306
      targetPort: db-server
      protocol: TCP
  type: NodePort
  selector:
    app: db
