nginx.yaml
# Nginx deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: 451153100141.dkr.ecr.ap-northeast-1.amazonaws.com/portfolio_nginx
          imagePullPolicy: IfNotPresent
          workingDir: /work
          ports:
            - containerPort: 80
              name: nginx-server
              protocol: TCP
          volumeMounts:
          - name: socket
            mountPath: /var/run/php-fpm
          - name: project
            mountPath: /work
      volumes:
      - name: socket
        persistentVolumeClaim:
          claimName: fpm-pvc
      - name: project
        persistentVolumeClaim:
          claimName: project-pvc
---
# Nginx svc
apiVersion: v1
kind: Service 
metadata: 
  name: nginx
  labels:
    app: nginx
spec: 
  ports:
  - port: 80
    targetPort: nginx-server
    protocol: TCP
  type: NodePort
  selector: 
    app: nginx
